Fix T93757: Do not force-instantiate indrectly linked objects in linking case.